--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Hello World!</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Hi, there!</h1>
+<p>Welcome to HiroCodes, a place to share your thoughts</p>
