created nav bar

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,3 @@
 <h1>Hi, there!</h1>
-<p>Welcome to HiroCodes, a place to share your thoughts</p>
+<p>Welcome to HiroCodes</p>
+<p>The place to store and share your non-quotidian pieces of wisdom</p>
