--- a/app/views/quotes/show.html.erb
+++ b/app/views/quotes/show.html.erb
@@ -1,10 +1,21 @@
-<p style="color: green"><%= notice %></p>
 
-<%= render @quote %>
 
-<div>
-  <%= link_to "Edit this quote", edit_quote_path(@quote) %> |
-  <%= link_to "Back to quotes", quotes_path %>
+<div class="card">
+  <div class="card-header">
+   <strong><%= @quote.author %></strong>
+  </div>
 
-  <%= button_to "Destroy this quote", @quote, method: :delete %>
+  <div class="card-body">
+    <h5 class="card-title">
+      <%= @quote.text %>
+    </h5>
+    <p class="card-text">
+        <i><%= @quote.genre %></i>
+    </p>
+    <div class="d-grid gap-2 d-md-flex">          
+          <%= button_to "Delete", @quote, method: :delete, data: { confirm: "Are you sure?" }, class:"btn btn-secondary" %>
+          <%= link_to 'Edit', edit_quote_path(@quote), class:"btn btn-outline-secondary" %>
+          <%= link_to 'Back', quotes_path, class:"btn btn-secondary" %>
+    </div>
+  </div>
 </div>
