--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -10,7 +10,7 @@
           <a class="nav-link" aria-current="page" href="/home/about">About Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Quotes</a>
+          <a class="nav-link" href="/quotes">Quotes</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
