--- a/app/views/quotes/show.html.erb
+++ b/app/views/quotes/show.html.erb
@@ -13,9 +13,9 @@
         <i><%= @quote.genre %></i>
     </p>
     <div class="d-grid gap-2 d-md-flex">          
-          <%= button_to "Delete", @quote, method: :delete, data: { confirm: "Are you sure?" }, class:"btn btn-secondary" %>
-          <%= link_to 'Edit', edit_quote_path(@quote), class:"btn btn-outline-secondary" %>
-          <%= link_to 'Back', quotes_path, class:"btn btn-secondary" %>
+          <%= button_to "Delete", @quote, method: :delete, data: { confirm: "Are you sure?" }, class:"btn btn-sm btn-secondary" %>
+          <%= link_to 'Edit', edit_quote_path(@quote), class:"btn btn-sm btn-outline-secondary" %>
+          <%= link_to 'Back', quotes_path, class:"btn btn-sm btn-secondary" %>
     </div>
   </div>
 </div>
