--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,11 @@
       <%= render 'home/header'%>
 
       <div class="container">
-          <%= yield %>
+        <% if notice%>
+          <%= render 'layouts/alerts'%>
+        <% end %>
+          
+        <%= yield %>
       </div>
       
       <footer class="mt-auto">
