--- a/app/views/quotes/_form.html.erb
+++ b/app/views/quotes/_form.html.erb
@@ -11,22 +11,19 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :author, style: "display: block" %>
-    <%= form.text_field :author %>
+  <div class="field form group">
+    <p><%= form.text_field :author_name, class:"form-control", placeholder: "Please type the author name of your quote here" %></p>
   </div>
 
-  <div>
-    <%= form.label :text, style: "display: block" %>
-    <%= form.text_area :text %>
+  <div class="field form group">
+    <p><%= form.text_area :text, class:"form-control", placeholder: "Please type the text of your quote here" %></p>
   </div>
 
-  <div>
-    <%= form.label :genre, style: "display: block" %>
-    <%= form.text_field :genre %>
+  <div class="field form group">
+    <p><%= form.text_field :genre, class:"form-control", placeholder: "Please type the genre that best describes your quote here" %></p>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="actions">
+    <%= form.submit class:"btn btn-secondary"%>
   </div>
 <% end %>
