--- a/app/views/quotes/edit.html.erb
+++ b/app/views/quotes/edit.html.erb
@@ -1,10 +1,12 @@
-<h1>Editing quote</h1>
+<br>
+<h3>More people would learn from their mistakes if they weren't so busy denying them.</h3>
+<p><i> -- Harold J. Smiths</i></p>
 
 <%= render "form", quote: @quote %>
 
 <br>
 
 <div>
-  <%= link_to "Show this quote", @quote %> |
-  <%= link_to "Back to quotes", quotes_path %>
+  <%= link_to "Show this quote", @quote, class:"btn btn-secondary btn-sm" %> 
+  <%= link_to "Back to quotes", quotes_path, class:"btn btn-secondary btn-sm" %>
 </div>
