--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -9,21 +9,27 @@
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="/home/about">About Me</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/quotes">Quotes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/quotes/new">Add Quote</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Resume</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Blog</a></li>
-          </ul>
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to "Quotes", quotes_path, class: "nav-link"%>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Add Quote", new_quote_path, class: "nav-link"%>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Edit Profile", edit_user_registration_path, class: "nav-link"%>
+          </li>
+          <li class="nav-item">
+            <%= button_to "Log Out", destroy_user_session_path, method: :delete, class: "nav-link btn btn-link"%>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "Sign Up", new_user_registration_path, class: "nav-link"%>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Sign In", new_user_session_path, class: "nav-link"%>
+          </li>          
+        <% end %>          
         </li>
       </ul>
     </div>
