continued to style quote and user views with bootstrap

--- a/app/views/quotes/edit.html.erb
+++ b/app/views/quotes/edit.html.erb
@@ -1,6 +1,14 @@
+<div class="container">
 <br>
-<h3>More people would learn from their mistakes if they weren't so busy denying them.</h3>
-<p><i> -- Harold J. Smiths</i></p>
+<figure class="text-end">
+        <blockquote class="blockquote">
+            <p>More people would learn from their mistakes if they weren't so busy denying them.</p>
+        </blockquote>
+        <figcaption class="blockquote-footer">
+            <cite><i>Harold J. Smiths</i></cite>
+        </figcaption>
+    </figure> 
+</div>
 
 <%= render "form", quote: @quote %>
 
