--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,10 +1,15 @@
 
 <div class="container">
   <br>
-  <h3>A proverb is a short sentence based on long experience</h3>
-  <p><i> -- Miguel de Cervantes</i></p>
+    <figure class="text-end">
+        <blockquote class="blockquote">
+            <p>A proverb is a short sentence based on long experience</p>
+        </blockquote>
+        <figcaption class="blockquote-footer">
+            <cite><i>Miguel de Cervantes</i></cite>
+        </figcaption>
+    </figure> 
 </div>
-
 
   <div id="quotes">
     <div class="row row-cols-1 row-cols-md-3 g-4">
