--- a/app/views/home/_footer.html.erb
+++ b/app/views/home/_footer.html.erb
@@ -1,9 +1,10 @@
 <div class="container bg-light">
-    <h6>
-        <br>
-        <q>What wisdom can you find that is greater than kindness?</q>
-    </h6>
-    <p>
-        <cite>-- Jean Jacques Rousseau</cite>
-    </p>
-</div>
+    <figure class="text-center">
+        <blockquote class="blockquote">
+            <p>What wisdom can you find that is greater than kindness?</p>
+        </blockquote>
+        <figcaption class="blockquote-footer">
+            <cite><i>Jean Jacques Rousseau</i></cite>
+        </figcaption>
+    </figure>  
+</div>    
