--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,34 @@
-<h2>Sign up</h2>
+<br>
+<figure class="text-end">
+  <blockquote class="blockquote">
+    <p>I do not want art for a few, any more than education for a few, or freedom for a few.</p>
+  </blockquote>
+  <figcaption class="blockquote-footer">
+    <cite><i>William Morris</i></cite>
+  </figcaption>
+</figure> 
 
+<div class="container">
+  <h3>Sign up:</h3>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="field form-group">
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "Please enter your email" %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <br>
+  <div class="field form-group">
+    <%= f.password_field :password, autocomplete: "new-password", class: "form-control", placeholder: "Please enter your new password (must be at least 6 characters)" %>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <br>
+  <div class="field form-group">
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", placeholder: "Please confirm your new password" %>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <br>
+  <div class="d-grid gap-1 d-md-flex justify-content-left actions">
+    <%= f.submit "Sign up", class:"btn btn-sm btn-secondary" %>
   </div>
 <% end %>
-
+  <br>
 <%= render "devise/shared/links" %>
+
