--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,10 +1,10 @@
 <div class="d-grid gap-1 d-md-flex justify-content-left">
   <%- if controller_name != 'sessions' %>
-    <%= link_to "Log in", new_session_path(resource_name), class:"btn btn-sm btn-secondary" %><br />
+    <%= link_to "Already have an account?", new_session_path(resource_name), class:"btn btn-sm btn-secondary" %><br />
   <% end %>
 
   <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <%= link_to "Sign in and explore!", new_registration_path(resource_name), class:"btn btn-sm btn-secondary" %><br />
+    <%= link_to "Sign up and explore!", new_registration_path(resource_name), class:"btn btn-sm btn-secondary" %><br />
   <% end %>
 
   <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
