--- a/app/views/quotes/_form.html.erb
+++ b/app/views/quotes/_form.html.erb
@@ -23,6 +23,12 @@
     <p><%= form.text_field :genre, class:"form-control", placeholder: "Please type the genre that best describes your quote here" %></p>
   </div>
 
+
+  <div class="field form group">
+    <p><%= form.text_field :user_id, class:"form-control", placeholder: "USER ID" %></p>
+    <%= current_user.methods %>
+  </div>
+
   <div class="actions">
     <%= form.submit class:"btn btn-secondary"%>
   </div>
