updated views and added :user_id field to quote_params array in controller actions to complete association when instantiating quotes

--- a/app/views/quotes/_form.html.erb
+++ b/app/views/quotes/_form.html.erb
@@ -25,8 +25,7 @@
 
 
   <div class="field form group">
-    <p><%= form.text_field :user_id, class:"form-control", placeholder: "USER ID" %></p>
-    <%= current_user.methods %>
+    <p><%= form.number_field :user_id, id: :quote_user_id, class:"form-control", value: current_user.id, type: :hidden %>
   </div>
 
   <div class="actions">
