--- a/app/views/quotes/show.html.erb
+++ b/app/views/quotes/show.html.erb
@@ -12,9 +12,13 @@
         <i><%= @quote.genre %></i>
     </p>
     <div class="d-grid gap-2 d-sm-flex">          
-          <%= button_to "Delete", @quote, method: :delete, class:"btn btn-sm btn-secondary" %>
-          <%= link_to 'Edit', edit_quote_path(@quote), class:"btn btn-sm btn-outline-secondary" %>
-          <%= link_to 'Back', quotes_path, class:"btn btn-sm btn-secondary" %>
+          <% if @quote.user == current_user %>
+            <%= button_to "Delete", @quote, method: :delete, class:"btn btn-sm btn-secondary" %>
+            <%= link_to 'Edit', edit_quote_path(@quote), class:"btn btn-sm btn-outline-secondary" %>
+            <%= link_to 'Back', quotes_path, class:"btn btn-sm btn-secondary" %>
+          <% else %>
+            <%= link_to 'Back', quotes_path, class:"btn btn-sm btn-secondary" %>
+          <% end %>
     </div>
   </div>
 </div>
