edited card header for quotes on show page

--- a/app/views/quotes/show.html.erb
+++ b/app/views/quotes/show.html.erb
@@ -1,7 +1,7 @@
-
+  <br>
 <div class="card">
-  <div class="card-header">
-   <strong><%= @quote.author %></strong>
+  <div class="card-header bg-dark bg-opacity-10 text-dark">
+   <%= @quote.author%>
   </div>
 
   <div class="card-body">
