updated home and about pages with content

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,3 +1,8 @@
-<h1>About me! <h1>
-
-<h3>The funny thing is... I've built this app way too many times on different frameworks for practice!</h3>
+<div class="container">
+    <br>
+    <h1>Hi, there! </h1>   
+    <br> 
+        <p> My name is Hiro, and I am a student learning full-stack development and working towards restarting my career as a software engineer.</p> 
+        <p> I am a historian by training and bring some solid research skills to the table--mainly fueled by coffee, curiosity, and oxford commas.</p>
+        <p> If you would like to collaborate, I am looking for opportunities that align with teamwork, lifetime learning, professional growth, and a true sense of mission...which I think is pretty inclusive.</p>
+</div>
