--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,16 @@
-<h1>Hi, there!</h1>
-<p>Welcome to HiroCodes</p>
-<p>The place to store and share your non-quotidian pieces of wisdom</p>
+<br>
+<div class="container">
+    <figure class="text-center">
+        <blockquote class="blockquote">
+            <h1>ThiNk AnD WoNdeR wOnDeR AnD tHiNk!</h1>
+        </blockquote>
+        <figcaption class="blockquote-footer">
+            <cite><i>Dr. Suess</i></cite>
+        </figcaption>
+    </figure> 
+<br>
+
+    <div class="container text-center">
+        <p> Welcome to HiroCodes, a place for you to share your favorite quotes and discover new insights </p>
+    </div>
+</div>
