--- a/app/views/quotes/new.html.erb
+++ b/app/views/quotes/new.html.erb
@@ -11,6 +11,7 @@
     </figure> 
 </div>
 
+<h4>Share some knowledge:</h4>
     <%= render "form", quote: @quote %><br>
     <div>
       <%= link_to "Back to Quotes", quotes_path, class: "btn btn-sm btn-outline-secondary" %>
