--- a/app/views/quotes/_form.html.erb
+++ b/app/views/quotes/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field form group">
-    <p><%= form.text_field :author, class:"form-control", placeholder: "Please type the author name of your quote here" %></p>
+    <p><%= form.text_field :author, class:"form-control", placeholder: "Please type the author's name here" %></p>
   </div>
 
   <div class="field form group">
