re create dbs and reran migrations for convention

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,6 +11,6 @@
 <br>
 
     <div class="container text-center">
-        <p> Welcome to HiroCodes, a place for you to share your favorite quotes and discover new insights </p>
+        <p> Welcome to HiroQuotes, a place for you to share your favorite quotes and discover new insights </p>
     </div>
 </div>
